fix: fix header width on mobile

--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -66,6 +66,7 @@ img {
 .header-wrapper {
   display: flex;
   width: var(--page-width);
+  max-width: 100%;
   flex-wrap: wrap;
   align-items: baseline;
   justify-content: space-between;
